CSS: fix gallery's subtitle too big width.

--- a/_sass/meta/_content.scss
+++ b/_sass/meta/_content.scss
@@ -292,7 +292,7 @@
   li { display: inline-block; padding: 0 10px; }
 
   li.subtitle {
-    width: 100%;
+    max-width: 100%;
     margin-top: 30px;
     margin-bottom: 20px;
 
